Ticket #3710 (closed bug: fixed)
Tracker crashes with BColumnTitle::Draw
| Reported by: | PieterPanman | Owned by: | aldeck |
|---|---|---|---|
| Priority: | normal | Milestone: | R1 |
| Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
| Keywords: | Cc: | planche2k@… | |
| Blocked By: | Platform: | All | |
| Blocking: | #3642, #3914, #4038 |
Description
Tracker crashed when I was switching workspaces, but I think I've seen this before. Not sure if it is related to switching workspaces. Revision 29884.
GNU gdb 6.3 Copyright 2004 Free Software Foundation, Inc. GDB is free software, covered by the GNU General Public License, and you are welcome to change it and/or distribute copies of it under certain conditions. Type "show copying" to see the conditions. There is absolutely no warranty for GDB. Type "show warranty" for details. This GDB was configured as "i586-pc-haiku"...(no debugging symbols found) [tcsetpgrp failed in terminal_inferior: Invalid Argument] Thread 1208 caused an exception: Segment violation Reading symbols from /boot/system/runtime_loader...done. Loaded symbols for /boot/system/runtime_loader Reading symbols from /boot/system/lib/libbe.so...done. Loaded symbols for /boot/system/lib/libbe.so Reading symbols from /boot/system/lib/libtracker.so...done. Loaded symbols for /boot/system/lib/libtracker.so Reading symbols from /boot/system/lib/libroot.so...done. Loaded symbols for /boot/system/lib/libroot.so Reading symbols from /boot/system/lib/libstdc++.r4.so...done. Loaded symbols for /boot/system/lib/libstdc++.r4.so Reading symbols from /boot/system/lib/libtranslation.so...done. Loaded symbols for /boot/system/lib/libtranslation.so Reading symbols from /boot/system/lib/libtextencoding.so...done. Loaded symbols for /boot/system/lib/libtextencoding.so Reading symbols from /boot/system/lib/libiconv.so...done. Loaded symbols for /boot/system/lib/libiconv.so [tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/Tracker (100) thread w>/boot/home/projects/TestOutli (1208)] 0x003d0ff2 in BString::BString () from /boot/system/lib/libbe.so (gdb) bt #0 0x003d0ff2 in BString::BString () from /boot/system/lib/libbe.so #1 0x005d0ddc in BPrivate::BColumnTitle::Draw () from /boot/system/lib/libtracker.so #2 0x005d0166 in BPrivate::BTitleView::Draw () from /boot/system/lib/libtracker.so #3 0x005cfdb9 in BPrivate::BTitleView::Draw () from /boot/system/lib/libtracker.so #4 0x0036d354 in BView::_Draw () from /boot/system/lib/libbe.so #5 0x00371c39 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so #6 0x00375808 in BWindow::task_looper () from /boot/system/lib/libbe.so #7 0x002b8e83 in BLooper::_task0_ () from /boot/system/lib/libbe.so #8 0x0067dcd8 in thread_entry () from /boot/system/lib/libroot.so #9 0x7003ffec in ?? () (gdb)
Attachments
Change History
Note: See
TracTickets for help on using
tickets.

