* In single window navigation mode, when navigating into a directory which had no viewstate yet (new folder) or if  fViewState didn't change, fTitleView wouldn't be reset and updated to the new column set. (unfortunately the column  state is managed separately from the rest of the view state). That would cause crashes for example when switching  to a directory with fewer columns and triggering a redraw of a column that shouldn't be there anymore.  Fixes #3710.

* TitleView::Reset didn't invalidate the view and would leave the old columns there until a redraw was
 triggered externally.

* Minor cleanup


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31378 a95241bf-73f2-0310-859d-f6bbb57e9c96